<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="500dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/surname" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/langs" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="500dp"
        android:orientation="vertical">

        <EditText
            android:layout_height="19dp"
            android:layout_width="50dp"/>

        <EditText
            android:layout_height="19dp"
            android:layout_width="50dp"/>

        <EditText
            android:layout_height="19dp"
            android:layout_width="50dp"/>

        <EditText
            android:layout_height="19dp"
            android:layout_width="50dp"/>

        <EditText
            android:layout_height="19dp"
            android:layout_width="50dp"/>

        <RadioButton
            android:layout_height="19dp"
            android:layout_width="50dp"/>

        <RadioButton
            android:layout_height="19dp"
            android:layout_width="50dp"/>

        <CheckBox
            android:layout_height="19dp"
            android:layout_width="50dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="500dp">

        <CalendarView
            android:layout_height="500dp"
            android:layout_width="500dp"/>

    </LinearLayout>


</LinearLayout>
